--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter_cache_manager: ^3.3.1
   just_audio: ^0.9.36
   syncfusion_flutter_sliders: ^23.2.6
+  http: ^1.2.0
 
 dev_dependencies:
   flutter_test:
