--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
     sdk: flutter
   flutter_cache_manager: ^3.3.1
   just_audio: ^0.9.37
-  syncfusion_flutter_sliders: ^29.2.9
+  syncfusion_flutter_sliders: 30.1.41
   http: ^1.2.0
 
 dev_dependencies:
