--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -12,13 +12,14 @@ dependencies:
   sizer:
   voice_message_package: 
     path: ../
+  path_provider: ^2.1.5
 
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^1.0.0
+  flutter_lints: ^6.0.0
 
 flutter:
   uses-material-design: true
